# semaphore

./: .gitignore  Cargo.toml  README.md  README.pt-BR.md  package-lock.json  package.json
.github/workflows/: release.yml
adapters/cursor/: README.md
crates/sem-core/: Cargo.toml
crates/sem-core/src/: config.rs  ipc.rs  lib.rs  state.rs  theme.rs
crates/semctl/: Cargo.toml
crates/semctl/src/: detect.rs  install.rs  lib.rs
locales/: CONTRIBUTING-i18n.md  en.json  pt-BR.json
scripts/: prepare-semctl.mjs
src/: i18n.ts  main.ts  styles.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
stream-deck/: package.json  tsconfig.json
stream-deck/com.semaphore.streamdeck.sdPlugin/: manifest.json
stream-deck/src/: plugin.ts
stream-deck/src/actions/: semaphore-light.ts
