[package]
name = "sem-core"
description = "Core state machine and IPC for Semaphore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tokio = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }
